2001-01-30  Akim Demaille  <akim@epita.fr>

	* tests/base.at (AC_CACHE_CHECK): Typo and clea nup.

2001-01-30  Paul Eggert  <eggert@twinsun.com>

	* autoheader.sh: Don't pass a string to 'echo' that might
	possibly contain backslashes.

2001-01-29  Pavel Roskin  <proski@gnu.org>

	Don't use filenames that can be reduced to "conftest" on DOS.

	* acfunctions.m4 (AC_FUNC_MMAP): Use conftest.mmap, not
	conftestmmap.
	(AC_FUNC_UTIME_NULL): Use conftest.data, not conftestdata.
	* acspecific.m4 (AC_PROG_MAKE_SET): Use conftest.make, not
	conftestmake.
	(_AC_PATH_X_XMKMF): Use conftest.dir, not conftestdir.
	* acgeneral.m4 (AC_ARG_PROGRAM): Use conftest.sed, not
	conftestsed.
	* m4/sanity.m4: Use conftest.file, not conftestfile.
	* doc/autoconf.texi (Guidelines for Test Programs): Suggest
	using conftest.data, not conftestdata.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4: Don't redirect builtins' stderr as Ultrix
	hates this: use a subshell.

2001-01-29  Assar Westerlund  <assar@sics.se>

	* m4sh.m4 (_AS_TEST_PREPARE): Discard output when testing `test
	-x' and `test -f' to avoid confusing users with error messages.
	(AS_MKDIR_P): Invert order of separators in IFS to avoid problem
	with some shells adding backslash between fields and parsing the
	result for escapes.
	* doc/autoconf.texi (Special Shell Variables): Document IFS.

2001-01-29  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_PROG_F77): Improve documentation of the compilers
	that are tried, add a few new ones (cft77, af77, epcf90, xlf95, g95),
	and put pgf90 in the right place (before the F95 compilers).

2001-01-29  Jim Meyering  <meyering@lucent.com>

	* autoscan.pl: Do scan `configure.ac' when you claim it.
	From Raja R Harinath.
	(@kinds): Use `qw', rather than lots of quotes and commas.
	(%generic_macro): Use single quotes around literals.
	($configure_scan): Define global, and use it instead of the literal.
	Use `warn' in place of `printf STDERR'.
